--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,11 +1,17 @@
-.mainContainer {
-  margin: 0 auto;
+@use "../../styles/global.module";
 
-  max-width: 750px;
+.mainContainer {
+  @extend .globalContainer;
+  //margin: 0 auto;
+
 
   display: flex;
   flex-wrap: wrap;
   min-height: 80vh;
+
+  @media only screen and (min-width: 992px) {
+    flex-wrap: nowrap;
+  }
 }
 
 //.content {
