--- a/src/components/video/video.module.scss
+++ b/src/components/video/video.module.scss
@@ -1,4 +1,17 @@
 .videoContainer {
-  flex-grow: 3;
-  min-width: 300px;
+  background-color: darkblue;
+
+  @media screen and (min-width: 768px) {
+    flex-grow: 3;
+    top: 10vh;
+  }
+}
+
+.ytp-autohide {
+  cursor: pointer !important;
+}
+
+.html5-video-player {
+  //position: sticky !important;
+  //top: 10vh !important;
 }
