Replace react-youtube with react-player; fix header and search styling

--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -1,4 +1,7 @@
 .sidebarContainer {
-  padding-left: 1rem;
-  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
