--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -2,8 +2,8 @@
 
 .mainContainer {
   @extend .globalContainer;
-  //margin: 0 auto;
-
+  margin: 0 auto;
+  max-width: 100vw;
 
   display: flex;
   flex-wrap: wrap;
@@ -13,7 +13,3 @@
     flex-wrap: nowrap;
   }
 }
-
-//.content {
-// flex-grow: 1;
-//}
