--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -1,30 +1,27 @@
 .searchContainer {
-  padding: 2rem;
+  display: flex;
+  align-items: center;
   margin: 0 auto;
-  background-color: maroon;
-  height: 21vh;
-
-  @media screen and (min-width: 768px) {
-    height: 10vh;
-  }
+  height: 10vh;
 }
 .searchForm {
   display: flex;
 }
 
 .inputField {
-  font-size: 2.1rem;
-  height: 3.4rem;
+  font-size: 1rem;
+  height: 1.6rem;
   padding: 0 1rem;
+  margin-left: 1rem;
   outline: none;
   border: none;
   border-bottom: solid 1px red;
+  width: 40vw;
 
   @media screen and (min-width: 768px) {
     font-size: 1.6rem;
-    height: 2.4rem;
+    height: 2.1rem;
   }
-
 }
 
 .submitButton {
@@ -32,7 +29,7 @@
   background-color: transparent;
 
   .searchIcon {
-    height: 2.1rem;
+    height: 1.6rem;
 
     @media screen and (min-width: 768px) {
       height: 1.6rem;
