--- a/src/components/video/video.module.scss
+++ b/src/components/video/video.module.scss
@@ -1,17 +1,9 @@
 .videoContainer {
-  background-color: darkblue;
+  position: sticky;
+  top: 10vh;
 
   @media screen and (min-width: 768px) {
     flex-grow: 3;
-    top: 10vh;
+    position: static;
   }
-}
-
-.ytp-autohide {
-  cursor: pointer !important;
-}
-
-.html5-video-player {
-  //position: sticky !important;
-  //top: 10vh !important;
 }
