--- a/src/components/video/video.module.scss
+++ b/src/components/video/video.module.scss
@@ -1,6 +1,7 @@
 .videoContainer {
   position: sticky;
   top: 10vh;
+  width: 100vw;
 
   @media screen and (min-width: 768px) {
     flex-grow: 3;
