--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -3,5 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  margin: 1rem auto;
+
+  @media screen and (min-width: 768px) {
+    margin: 0 16px;
+  }
 }
