--- a/src/components/videoListItem/videoListItem.module.scss
+++ b/src/components/videoListItem/videoListItem.module.scss
@@ -1,20 +1,54 @@
-.videoListItem {
+.item {
   display: flex;
   flex-direction: column;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 
   margin-bottom: 16px;
   width: 100%;
 
-
-  button {
-    border: none;
-    width: 100%;
-  }
-
   img {
     object-fit: contain;
-    //width: 100%;
-    height: 150px;
+    width: 95vw;
+
+    @media screen and (min-width: 768px) {
+      height: 150px;
+      width: auto;
+    }
   }
 
+  h3 {
+    font-size: 1rem;
+    font-weight: 500;
+    margin: 0.5rem 0;
+
+    @media screen and (min-width: 768px) {
+      font-size: 1.2rem;
+    }
+  }
+}
+
+.metaData {
+  width: 95vw;
+
+  @media screen and (min-width: 768px) {
+    width: auto;
+    margin-left: 8px;
+  }
+}
+
+.secondaryMetaData {
+  font-size: 0.8rem;
+  color: #585757;
+}
+
+.viewCount::after {
+  content: "•";
+  margin: 0 4px;
+}
+
+.channelName {
+  margin-bottom: 0.5rem;
 }
