--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .sidebarContainer {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,7 @@
   align-items: center;
   margin: 1rem auto;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin: 0 16px;
   }
 }
