--- a/src/components/videoListItem/videoListItem.module.scss
+++ b/src/components/videoListItem/videoListItem.module.scss
@@ -1,8 +1,10 @@
+@import "../../styles/variables.scss";
+
 .item {
   display: flex;
   flex-direction: column;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     flex-direction: row;
   }
 
@@ -13,7 +15,7 @@
     object-fit: contain;
     width: 95vw;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       height: 150px;
       width: auto;
     }
@@ -24,7 +26,7 @@
     font-weight: 500;
     margin: 0.5rem 0;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       font-size: 1.2rem;
     }
   }
@@ -37,7 +39,7 @@
 .metaData {
   width: 95vw;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     width: auto;
     margin-left: 8px;
   }
